<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">容麽麽</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_moment">MomentActivity</string>
    <string name="product_tab_hot">最 热</string>
    <string name="product_tab_new">最 新</string>
    <string name="search_hint">以关键字进行搜索</string>
    <string name="meijia">美甲</string>
    <string name="meizhuang">美妆</string>
    <!-- waterflow -->
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="filter">筛 选</string>

    <!-- Strings related to login -->
    <string name="title_activity_sign_in">登录</string>
    <string name="title_activity_sign_up">快速注册</string>

    <string name="prompt_account">请输入手机号/email</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_confirm_password">请再次输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_sign_out_short">注销</string>
    <string name="action_sign_up">快速注册</string>
    <string name="action_sign_up_short">注册</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">无效密码</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">此项不能为空</string>
    <string name="error_format">email或者手机号格式错误</string>
    <string name="confirm_password_faile">两次密码不一致</string>
    <string name="signup_success">注册成功，请登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register_with_phone">手机快速注册</string>
    <string name="title_activity_user_center">UserCenterActivity</string>
    
    <string name="user_center_my_order">我的订单</string>
	<string name="user_center_my_address">常用地址</string>
	<string name="user_center_my_collect">我的收藏</string>
	<string name="user_center_my_msg">我的消息</string>
	<string name="user_center_service_call">客服电话</string>
	<string name="user_center_feedback">意见反馈</string>
	<string name="user_center_welcomepassager">Passenger</string>
	<string name="service_call_no">10086</string>
	
	<string name="product_collection">收藏</string>
	<string name="product_application_price">么么价  : </string>
	<string name="product_shop_price">店面价 : </string>
	<string name="test_price">5.00</string>
	<string name="product_order">预   约</string>
	<string name="author_share">分 享</string>
	<string name="author_collect">收 藏</string>
	<string name="author_honor">勋 章</string>
	<string name="search_button">搜索</string>
	<string name="order_time">预约时间</string>
	<string name="location">地理位置</string>
	<string name="detail_location">详细位置</string>
	<string name="additional_info">点击添加附加信息</string>
    <string name="affirm_order">确认下单</string>
    <string name="order_all">全部订单</string>
    <string name="order_waitpay">待付款</string>
    <string name="order_waitaffirm">待确认</string>
    <string name="user_phone">电       话:</string>
    <string name="user_addr">地      址:</string>
    <string name="user_time">时      间:</string>
    <string name="user_name">姓      名:</string>
    <string name="order_detail">订单详情</string>
    <string name="alter_info">修    改</string>
    <string name="pay_way">支付方式</string>
    <string name="product_num">数 量: %1$d</string>
    <string name="product_price">价 格 : ¥%1$s</string>
    <string name="product_author">商 家 : </string>
    <string name="product_totalnum">共 %1$d 件</string>
    <string name="pay_total_money">合 计 : </string>
    <string name="go_pay_btn">去付款</string>
    <string name="order_state">状&#160;&#160;&#160;&#160;&#160;&#160;态:</string>
    <string name="order_total_price">总&#160;&#160;&#160;&#160;&#160;&#160;价:</string>
    <string name="go_pay">去支付</string>
    <string name="order_cancel">取消</string>
    <string name="order_del">删除</string>
    <string name="order_selall">选择全部</string>
    
	<string name="sendmoment">圈子分享</string>
    <string name="usersetting">个人设置</string>
    
      <string name="activity_testlocation_add_detail">输入地址细节</string>
            <string name="activity_testlocation_label">地址：</string>
         <string name="circle_add_location">add your location</string>
            
            

    <string name="title">Cropper</string>
    <string name="fixedAspectRatio">fixedAspectRatio =</string>
    <string name="aspectRatioX">\u002010</string>
    <string name="aspectRatioXHeader">aspectRatioX =</string>
    <string name="aspectRatioY">\u002010</string>
    <string name="aspectRatioYHeader">aspectRatioY =</string>
    <string name="showGuidelines">showGuidelines = </string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="croppedImageDesc">The cropped image.</string>

    <string-array name="showGuidelinesArray">
        <item>Off</item>
        <item>On Touch</item>
        <item>On</item>
    </string-array>
</resources>
