<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@color/pink">
    
    <LinearLayout  android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:id="@+id/product_tabpage">
    	
		<TextView
		    android:id="@+id/product_hot_tab"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:padding="10dp"
		    android:text="@string/product_tab_hot" />
		
	    <TextView
	        android:id="@+id/product_new_tab"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:padding="10dp"
	        android:text="@string/product_tab_new" />
	
	    <!-- 
	    <Spinner
	        android:id="@+id/product_filter_tab"
	        android:gravity="center"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content" 
	        /> -->
	        
        <TextView
	        android:id="@+id/product_filter_tab"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_weight="1"
	        android:padding="10dp"
	        android:text="@string/filter" 
	        android:background="@drawable/filter"/>
    
    </LinearLayout>
    <View android:layout_height="2dp"
        android:layout_width="wrap_content"
        android:background="@color/blue"
        android:id="@+id/bottom_line"/>
</LinearLayout>
