<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/white"
    android:orientation="vertical" >
    
	<View android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@color/border_great"/>
	
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal"
	    android:paddingBottom="10dp"
	    android:paddingTop="10dp"
	    >
	    <TextView android:id="@+id/order_del_pay_cancel"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="5dp"
	        android:textSize="18sp"
	        android:textColor="@color/white"
	        android:background="@drawable/pink_btn"
	        android:text="@string/order_cancel"
	        />
	    <TextView android:id="@+id/order_del_pay_del"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:textSize="18sp"
	        android:textColor="@color/white"
	        android:background="@drawable/pink_btn"
	        android:text="@string/order_del"
	        />
	    <TextView android:id="@+id/order_del_pay_pay"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="10dp"
	        android:textSize="18sp"
	        android:textColor="@color/white"
	        android:background="@drawable/pink_btn"
	        android:text="@string/go_pay"
	        />
	</LinearLayout>
</LinearLayout>
