<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical" >
    
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/white"
	    android:id="@+id/fragment_order_user_fragment"></LinearLayout>
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/white"
	    android:orientation="horizontal">
	    <TextView android:id="@+id/fragment_order_all"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/order_all"
	     	android:paddingTop="10dp"
	    	android:paddingBottom="10dp"
	        android:gravity="center"/>
	    
	    <View android:layout_width="2dp"
	        android:layout_height="match_parent"
	        android:background="@color/red"/>
	    
	    <TextView android:id="@+id/fragment_order_waitpay"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/order_waitpay"
	     	android:paddingTop="10dp"
	    	android:paddingBottom="10dp"
	        android:gravity="center"/>
	    
	    <View android:layout_width="2dp"
	        android:layout_height="match_parent"
	        android:background="@color/red"/>
	    
	    <TextView android:id="@+id/fragment_order_waitaffirm"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/order_waitaffirm"
	     	android:paddingTop="10dp"
	    	android:paddingBottom="10dp"
	        android:gravity="center"/>
	</LinearLayout>
	
	<View android:layout_width="match_parent"
	   android:layout_height="2dp"
	   android:background="@color/red"/>
	
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/white"
	    android:id="@+id/fragment_order_product_fragment"></LinearLayout>
</LinearLayout>