<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@color/white"
    >
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:id="@+id/order_author_activity">

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dp" >

	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_gravity="center"
	            android:src="@drawable/user"
	            android:layout_centerVertical="true"
	            android:id="@+id/oaa_iv1" />

	        <TextView
	            android:id="@+id/order_author_activity_time"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/oaa_iv1"
	            android:gravity="center_vertical"
				android:hint="@string/order_time"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
	            android:background="@drawable/search_frame_jog"/>
	        
	        <ImageView android:id="@+id/order_author_activity_cancel_time"
	            android:layout_alignRight="@id/order_author_activity_time"
	            android:layout_width="25dp"
	            android:layout_centerVertical="true"
	            android:layout_marginRight="20dp"
	            android:scaleType="center"
	            android:src="@drawable/cancel"
	            android:layout_height="match_parent"/>
	    </RelativeLayout>

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dp" >

	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_gravity="center"
	            android:src="@drawable/user"
	            android:layout_centerVertical="true"
	            android:id="@+id/oaa_iv2" />

	        <TextView
	            android:id="@+id/order_author_activity_position"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/oaa_iv2"
	            android:gravity="center_vertical"
				android:hint="@string/location"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
	            android:background="@drawable/search_frame_jog"/>
	        
	        <ImageView android:id="@+id/order_author_activity_cancel_position"
	            android:layout_alignRight="@id/order_author_activity_position"
	            android:layout_width="25dp"
	            android:layout_centerVertical="true"
	            android:layout_marginRight="20dp"
	            android:scaleType="center"
	            android:src="@drawable/cancel"
	            android:layout_height="match_parent"/>
	    </RelativeLayout>
	   
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dp" >

	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_gravity="center"
	            android:src="@drawable/user"
	            android:layout_centerVertical="true"
	            android:id="@+id/oaa_iv3" />

	        <TextView
	            android:id="@+id/order_author_activity_detail"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/oaa_iv3"
	            android:gravity="center_vertical"
				android:hint="@string/detail_location"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
	            android:background="@drawable/search_frame_jog"/>
	        
	        <ImageView android:id="@+id/order_author_activity_cancel_detail"
	            android:layout_alignRight="@id/order_author_activity_detail"
	            android:layout_width="25dp"
	            android:layout_centerVertical="true"
	            android:layout_marginRight="20dp"
	            android:scaleType="center"
	            android:src="@drawable/cancel"
	            android:layout_height="match_parent"/>
	    </RelativeLayout>
	    
	    
	    <LinearLayout android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center">
		   <LinearLayout
		        android:id="@+id/order_author_activity_morelabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:background="@drawable/stylelabel"
		        android:orientation="horizontal" 
		        >
	
		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/btn_add_s" />
	
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:gravity="center_vertical"
		            android:padding="8dp"
		            android:text="@string/additional_info" />
		    </LinearLayout>
	    </LinearLayout>
	    
         <EditText android:id="@+id/order_author_activity_moremsg"
	        android:layout_width="match_parent"
	        android:layout_height="80dp"
	        android:layout_margin="2dp"
	        android:maxLines="6"
	        android:minLines="3"
	        android:background="@drawable/search_frame_jog"
	         />
	    <!-- 在这里输入百度地图视图相关总局代码，id=order_author_activity_map -->
	    <!-- @empark -->
	    
	    <!--  提交订单按钮 -->
	   <TextView android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:id="@+id/order_author_activity_affirm"
	    android:text="@string/affirm_order"
	    android:background="@drawable/order_button"
	    android:gravity="center"
	    android:textSize="18sp"
	    android:padding="10dp"
	    android:layout_marginTop="10dp"/>
	</LinearLayout>

</ScrollView>